--- a/wiki/InstallSciSoftWindows.wiki
+++ b/wiki/InstallSciSoftWindows.wiki
@@ -18,3 +18,34 @@ To check MSYS installation, click MSYS icon on the Desktop and run
 {{{
 g++ --version
 }}}
+When installing third party software under MSYS, use `/mingw/local` as a prefix (avoid using `/usr/local`, for instance.)
+
+Download and save http://users.ugent.be/~bpuype/cgi-bin/fetch.pl?dl=wget/wget.exe
+to `C:\MSYS\1.0\bin`.
+
+== SSH ==
+
+Download the following files from http://sourceforge.net/projects/mingw/files to `c:\msys\1.0`:
+
+  * openssh-4.7p1-2-msys-1.0.11-bin.tar.lzma
+  * libminires-1.02_1-1-msys-1.0.11-dll.tar.lzma
+  * libopenssl-0.9.8k-1-msys-1.0.11-dll-098.tar.lzma
+  * zlib-1.2.3-1-msys-1.0.11-dll.tar.gz
+
+and then in MSYS prompt run the following commands for each file:
+{{{
+lzma -d file.tar.lzma # or gunzip file.tar.gz
+tar xf file.tar
+}}}
+Finally, test `ssh` program from MSYS propmt.
+
+Alternatively, you can install http://www.bitvise.com/tunnelier.
+
+== Subversion ==
+
+Install http://subversion.tigris.org/files/documents/15/43506/Setup-Subversion-1.5.2.en-us.msi. Now `svn.exe` will be available in MSYS propmt.
+
+== Python ==
+
+Install recent Python 2.6 version from http://python.org/download/.
+Add `C:\Python26` to your system `PATH` environment variable (go to `Control Panel/System and Security/System/Advanced system settings/Advanced/Environment Variables/...`).
