--- a/wiki/IOCBioStrathKelvin.wiki
+++ b/wiki/IOCBioStrathKelvin.wiki
@@ -22,7 +22,7 @@ Since _iocbio.strathkelvin_ is written in Python and uses various scientific com
   * [http://www.python.org/ Python] - an easy to learn, powerful programming language.
   * [http://www.wxpython.org/ WX Python] - a GUI toolkit for the Python programming language.
   * [http://www.numpy.org/ Numpy] - the fundamental package needed for scientific computing with Python.
-  * [http://matplotlib.sourceforge.net/ Matplotlib] - a python 2D plotting library (optional).
+  * [http://matplotlib.sourceforge.net/ Matplotlib] - a python 2D plotting library.
 
 The sources of iocbio.strathkelvin is available via [http://code.google.com/p/iocbio/source/list SVN] and HTTP. Note that iocbio.strathkelvin requires Python 2.5 or newer.
 
@@ -32,7 +32,7 @@ To ease the process of installing required software for Windows users, below we 
     * WX Python: http://iocbio.googlecode.com/files/wxPython2.8-win32-unicode-2.8.9.2-py26.exe
     * Numpy: http://iocbio.googlecode.com/files/numpy-1.4.0.dev6882.win32-py2.6.exe
     * Matplotlib: http://iocbio.googlecode.com/files/matplotlib-1.0.svn.win32-py2.6.exe
-    * iocbio: to be announced
+    * iocbio: http://iocbio.googlecode.com/files/iocbio-1.1.0.dev30.win32-py2.6.exe
     * and finally, restart your computer.
 
-You will find a new folder IOCBio in your computers Desktop that contains a shortcut to iocbio.strathkelvin929 script. Double-click on the link to start the GUI program.
+You will find a new folder "IOCBio Software" in your computers Desktop that contains a shortcut to iocbio.strathkelvin929 script. Double-click on the Strathkelvin929 to start the GUI program.
