--- a/wiki/IOCBioStrathKelvin.wiki
+++ b/wiki/IOCBioStrathKelvin.wiki
@@ -14,11 +14,11 @@ The IOCBio.StrathKelvin software provides a GUI program:
 {{{
   iocbio.strathkelvin929
 }}}
-which can be access via `Strathkelvin929` shortcut in the `Desktop/IOCBio Software` folder.
+which can be accessed via `Strathkelvin929` shortcut in the `Desktop/IOCBio Software` folder.
 
 = Installation =
 
-Since _iocbio.strathkelvin_ is written in Python and uses various scientific computational modules and provides basic graphical interfaces, then the following software (with all their dependencies) must be installed to use IOCBio Strathkelvin Software:
+Since _iocbio.strathkelvin_ is written in Python and uses various scientific computational modules and provides basic graphical interfaces, then the following software (with all their dependencies) must be installed to use IOCBio StrathKelvin software:
 
   * [http://www.python.org/ Python] - an easy to learn, powerful programming language.
   * [http://www.wxpython.org/ WX Python] - a GUI toolkit for the Python programming language.
