Edited wiki page DeconvolutionSoftware through web user interface.

--- a/wiki/DeconvolutionSoftware.wiki
+++ b/wiki/DeconvolutionSoftware.wiki
@@ -1,4 +1,4 @@
-#summary A list of open-source deconvolution software
+#summary A list of deconvolution software
 
 This page contains various information on available deconvolution software.
 
