--- a/wiki/DeconvolutionSoftware.wiki
+++ b/wiki/DeconvolutionSoftware.wiki
@@ -1,6 +1,6 @@
 #summary A list of deconvolution software
 
-This page contains various information on available deconvolution software.
+This page contains various information on deconvolution software. Please let us know if the list is incomplete.
 
 = Open-source software =
 
