--- a/wiki/DeconvolutionTutorial.wiki
+++ b/wiki/DeconvolutionTutorial.wiki
@@ -18,11 +18,18 @@ For an old tutorial, see
 
 This tutorial introduces iocbio.deconvolve program for deconvolving microscope image with measured point spread function (PSF). 
 
+Note that in the following all iocbio programs are run with ``--no-gui`` options. Discarding this option from a command line will create a graphical user interface for specifying various options.
+
 = Microscope image =
 
-As an example, let us consider the following microscope image of rat cardiomyocyte with stained mitochondria that is acquired with a confocal microscope with photon counting detector ([http://sysbio.ioc.ee/download/software/iocbio.microscope/cell2_mitogreen_px25.tif.gz compressed TIF image (23MB)]):
+As an example, let us consider the following microscope image of a rat cardiomyocyte with stained mitochondria that is acquired with a confocal microscope with photon counting detector ([http://sysbio.ioc.ee/download/software/iocbio.microscope/cell2_mitogreen_px25.tif.gz compressed TIF image (23MB)]):
 
 http://sysbio.ioc.ee/download/software/iocbio.microscope/cell_original.png
+
+This view of a microscope image is created with the following command:
+{{{
+iocbio.show -i cell2_mitogreen_px25.tif --view-3d=c,c,c --no-gui
+}}}
 
 = Point spread function =
 
@@ -30,6 +37,40 @@ The point spread function was estimated from a cluster of microspheres (d=0.175u
 
   http://sysbio.ioc.ee/download/software/iocbio.microscope/microspheres.png
 
-The estimated PSF ([http://sysbio/download/software/iocbio.microscope/psf_airy_478_water.tif.gz compressed TIF image (64KB)]) is:
-
+The estimated PSF ([http://sysbio/download/software/iocbio.microscope/psf_airy_478_water.tif.gz compressed TIF image (64KB)]) is obtained by running:
+{{{
+iocbio.estimate_psf -i psf4_505_pxt50.tif --save-intermediate-results -o psf_airy_478_water.tif --no-gui
+}}}
+The result is shown below:
   http://sysbio.ioc.ee/download/software/iocbio.microscope/psf.png
+
+= Deconvolving microscope image =
+
+To deconvolve microscope image with given PSF image, run
+{{{
+iocbio.deconvolve -i cell2_mitogreen_px25.tif -k psf_airy_478_water.tif -o result.tif --rltv-estimate-lambda --rltv-lambda-lsq-coeff=0 --max-nof-iterations=20 --no-degrade-input --save-intermediate-results --float-type=single --no-gui
+}}}
+that will show the following output:
+{{{
+Fixing cell2_mitogreen_px25.tif to /home/pearu/svn/iocbio/iocbio/microscope/tutorial/cell2_mitogreen_px25.tif
+Fixing psf_airy_478_water.tif to /home/pearu/svn/iocbio/iocbio/microscope/tutorial/psf_airy_478_water.tif
+PSF was zoomed by (0.40740740740740744, 0.17837891324424673, 0.17837891324424673)
+Input image has signal-to-noise ratio 7.80550612875
+Suggested RLTV regularization parameter: 5.50893168114[blocky]..7.68688141555[honeycomb]
+Initial photon count: 184532944.000
+Initial minimum: 0.000
+Initial maximum: 82.000
+lambda-opt= 6.40573451295
+lambda-lsq-0= 0.840393
+lambda-lsq-coeff= 7.62231091018
+[=>                1/20                ] E/S/U/N=13/6793900/191323945/0, KLIC=0.584, LAM/MX=10.4/10.4, LEAK=-7.36%, MSE=9.68E-2, TAU1/2=0.188/0.280, TIME=72.1s
+}}}
+Notice that the signal-to-noise ratio (SNR) is estimated to 7.8 which is rather small. This can also be observed from the microscope image above: noise is well visible.
+
+The result of deconvolution can be visualized by running
+{{{
+iocbio.rowfile_plot -i result.tif.iocbio.deconvolve/deconvolve_data.txt --x-keys=count --y-keys=lambda_lsq,mse,tau1 --no-gui
+}}}
+that will show the evolution of estimated lambda_lsq, mse (mean square error of convolve(estimate, psf) and input image), tau1 (a measure of convergence):
+
+http://sysbio.ioc.ee/download/software/iocbio.microscope/deconvolve_result_lsq.png
