--- a/wiki/DeconvolutionTutorial.wiki
+++ b/wiki/DeconvolutionTutorial.wiki
@@ -48,7 +48,9 @@ The result is shown below:
 
 To deconvolve microscope image with given PSF image, run
 {{{
-iocbio.deconvolve -i cell2_mitogreen_px25.tif -k psf_airy_478_water.tif -o result.tif --rltv-estimate-lambda --rltv-lambda-lsq-coeff=0 --max-nof-iterations=20 --no-degrade-input --save-intermediate-results --float-type=single --no-gui
+iocbio.deconvolve -i cell2_mitogreen_px25.tif -k psf_airy_478_water.tif -o result.tif \
+  --rltv-estimate-lambda --rltv-lambda-lsq-coeff=0 --max-nof-iterations=20 \
+  --no-degrade-input --save-intermediate-results --float-type=single --no-gui
 }}}
 that will show the following output:
 {{{
@@ -73,4 +75,32 @@ iocbio.rowfile_plot -i result.tif.iocbio.deconvolve/deconvolve_data.txt --x-keys
 }}}
 that will show the evolution of estimated lambda_lsq, mse (mean square error of convolve(estimate, psf) and input image), tau1 (a measure of convergence):
 
-http://sysbio.ioc.ee/download/software/iocbio.microscope/deconvolve_result_lsq.png
+http://sysbio.ioc.ee/download/software/iocbio.microscope/deconvolve_result_params.png
+
+We suggest stopping the iteration after 5 steps of lambda_lsq obtaining its maximum,
+that is at 7th iteration in this particular case. The result of 7th iteration
+is
+  http://sysbio.ioc.ee/download/software/iocbio.microscope/deconvolve_result_7.png
+that is created with:
+{{{
+iocbio.show -i result.tif.iocbio.deconvolve/result_7.tif --view-3d=c,c,c --no-gui
+}}}
+Notice that the noise is considerably reduced.
+
+In the above we let iocbio.deconvolve to estimate regularization parameter. Since we have estimated the noise-to-signal ratio of microscope image, we can use the following formula
+{{{
+  lambda = 50/SNR
+}}}
+to estimate the value for regularization parameter lambda, that is, 50/7.8=6.4.
+Next we re-run deconvolution with fixed lambda value as follows:
+{{{
+iocbio.deconvolve -i cell2_mitogreen_px25.tif -k psf_airy_478_water.tif -o result2.tif \
+  --no-rltv-estimate-lambda --rltv-lambda-lsq-coeff=0 --max-nof-iterations=20 \
+  --no-degrade-input --save-intermediate-results --float-type=single --rltv-lambda=6.4 \
+  --rltv-compute-lambda-lsq --no-gui
+}}}
+The 8th iteration result is
+
+  http://sysbio.ioc.ee/download/software/iocbio.microscope/deconvolve_result2_8.png
+
+that was suggested by the max lambda_lsq + 5 stopping criteria.
