Edited wiki page IOCBioMicroscope through web user interface.

--- a/wiki/IOCBioMicroscope.wiki
+++ b/wiki/IOCBioMicroscope.wiki
@@ -38,15 +38,18 @@ To ease the process of installing required software and iocbio package for Windo
 
   * [http://sysbio.ioc.ee/download/software/binaries/latest/iocbio_installer_py26.exe iocbio_installer_py26.exe]
 
-The installer should be run as Administrator. So, you must download the installer, save it to disk, and then right-click it and choose {{{Run as administrator}}} menu item.
+The installer should be run as Administrator. So, you must download the installer, save it to disk, and then right-click it and choose {{{"Run as administrator"}}} menu item.
 
-When some required software component is not found then the iocbio installer can download and run the corresponding installers, just be ready to click Next, Next, ... and accept all default installation options,
+When some required software component is not found then the iocbio installer can download and run the corresponding installers, just be ready to click Next, Next, ... and accept all default installation options. The following selection of software has prebuilt binaries available:
+{{{
+Python 2.6, Numpy 1.5, Scipy 0.9, Matplotlib 1.0, wx 2.9.
+}}}
 
 Finally, computer restart is required to finalise any PATH updates.
 
 You will find a new folder `IOCBio Software` in your computers Desktop that contains links to iocbio.microscope scripts. Double-click on the links to start GUI of the corresponding program.
 
-To get updates for IOCBio Software, rerun the iocbio installer and at the Iocbio configuration tab select {{{Update and install iocbio from svn}}}.
+To get updates for IOCBio Software, rerun the iocbio installer and at the Iocbio configuration tab select {{{"Update and install iocbio from svn"}}}.
 
 == Linux users ==
 
